# bis_solver

./: Cargo.toml  README.md  book.toml
doc/: SUMMARY.md  functions.md  preamble.md  units.md
src/: data.rs  items.csv  main.rs  main.rs.bak  solver.rs  ui.rs  utils.rs  xivapi.rs
src/solver/: infinite_dummy.rs  rolling.rs  split.rs  timeline.rs
