[package]
author = "Flat Bartender <flat.bartender@gmail.com>"
name = "bis_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
itertools = "0.10"
rayon = "1.5"
cursive = { version = "0.16", default-features = false, features = ["crossterm-backend"] }
log = "0.4"
