[package]
author = "Flat Bartender <flat.bartender@gmail.com>"
name = "bis_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
itertools = "0.10.3"
rayon = "1.5.3"
cached = "0.38.0"
eframe = "0.19.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
eyre = "0.6.8"
egui_extras = "0.19.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
flagset = "0.4.3"
